v1/Infrastructure/K8_scripts/authServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
  labels:
    app: auth-service
    creator: padre
  namespace: mealappapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      name: auth-service-pod
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service-container
        image: gerald22/meal_api_auth:3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9602
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: mealappapi
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 9602
    targetPort: 9602
  type: ClusterIP
