v1/Infrastructure/K8_scripts/deliveryServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service-deployment
  labels:
    app: delivery-service
  namespace: mealappapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      name: delivery-service-pod
      labels:
        app: delivery-service
    spec:
      containers:
      - name: delivery-service-container
        image: gerald22/meal_api_delivery:3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9601
---

apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: mealappapi
spec:
  selector:
    app: delivery-service
  ports:
  - protocol: TCP
    port: 9603
    targetPort: 9603
  type: ClusterIP
