v1/Infrastructure/K8_scripts/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mealappapi
  name: rabbitmq-deployment
  labels:
    app: rabbitmq
    creator: padre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      name: rabbitmq-pod
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3.9-rc-management
        name: rabbitmq-container
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5672
        - containerPort: 15672
        volumeMounts:
        - name: rabbitmq-config-volume
          mountPath: "/etc/rabbitmq/rabbitmq.conf"
          subPath: rabbitmq.conf
      volumes:
      - name: rabbitmq-config-volume
        configMap:
          name: rabbitmq-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: mealappapi
  name: rabbitmq
  labels:
    app: rabbitmq
    creator: padre
spec:
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    name: amqp
    port: 5672
    targetPort: 5672
  - protocol: TCP
    name: management
    port: 15672
    targetPort: 15672
  type: ClusterIP
